Fix layout bug for excerpts view in narrower widths with minimal (narrow) post content.

--- a/scss/excerpts-view.scss
+++ b/scss/excerpts-view.scss
@@ -1,9 +1,10 @@
 @import "colours.scss";
 @import "scss-include/mixins.scss";
 
+$dynamic-excerpt-width-threshold: 1060px;
 @mixin dynamic-excerpt-width {
     width: 720px;
-    @media screen and (max-width: 1060px) {
+    @media screen and (max-width: $dynamic-excerpt-width-threshold) {
         width: auto;
         margin-left: 240px;
     }
@@ -143,6 +144,9 @@ body.body.excerpts-view .main {
         @include shadow;
         @include rounded;
         float: right;
+        @media screen and (max-width: $dynamic-excerpt-width-threshold) {
+            float: none;
+        }
         background-color: $dust;
         @include dynamic-excerpt-width;
     }
